# Mosaic-Generator

./: CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: CMakeLists.txt  controller.cpp  controller.h  generator.cpp  generator.h  iconrepository.cpp  iconrepository.h  mosaic.cpp  mosaic.h  pixelmap.cpp  pixelmap.h
main/: mainwindow.cpp  mainwindow.ui
src/: main.cpp
src/lib/: CMakeLists.txt
src/lib/main/: iconrepository.cpp  iconrepository.h  mainwindow.h  pixelmap.cpp  pixelmap.h
src/tests/: CMakeLists.txt  pixelmap_test.cpp
tests/: CMakeLists.txt  generator_test.cpp  main.cpp  mosaic_test.cpp  pixelmap_test.cpp
ui/: CMakeLists.txt  fileselectlineedit.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mosaicwindow.cpp  mosaicwindow.h  mosaicwindow.ui
